--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,45 @@
 		<div class="wrapper">
 			@@include('html/_header.htm', {})
 			<main class="page">
-				
+				<section class="hero">
+					<div class="hero__container">
+						<div class="hero__body">
+							<div class="hero__content">
+								<h1 class="hero__title">A better world for pets</h1>
+								<a href="#" class="hero__button button button-border"><span>Explore</span></a>
+							</div>
+						</div>
+						<div class="hero__slider swiper">
+							<div class="hero__wrapper swiper-wrapper">
+								<div class="hero__slide slide-hero swiper-slide">
+									<div class="slide-hero__body">
+										<img src="@img/pet_dog.png" class="slide-hero__image" alt="image">
+									</div>
+								</div>
+								<div class="hero__slide slide-hero swiper-slide">
+									<div class="slide-hero__body">
+										<img src="@img/pet_dog.png" class="slide-hero__image" alt="image">
+									</div>
+								</div>
+								<div class="hero__slide slide-hero swiper-slide">
+									<div class="slide-hero__body">
+										<img src="@img/pet_dog.png" class="slide-hero__image" alt="image">
+									</div>
+								</div>
+								<div class="hero__slide slide-hero swiper-slide">
+									<div class="slide-hero__body">
+										<img src="@img/pet_dog.png" class="slide-hero__image" alt="image">
+									</div>
+								</div>
+							</div>
+							<div class="hero__controll">
+								<button type="button" class="hero__arrow hero__arrow--left _icon-slider-arrow"></button>
+								<button type="button" class="hero__arrow hero__arrow--right _icon-slider-arrow"></button>
+							</div>
+						</div>
+					</div>
+					<img class="hero__bg" src="@img/hero_bg.jpg" alt="Hero background image">
+				</section>
 			</main>
 			@@include('html/_footer.htm', {})
 		</div>
