Two swiper-sliders united to work like one. The controller arrows added

--- a/src/index.html
+++ b/src/index.html
@@ -38,34 +38,36 @@
 									</div>
 								</div>
 							</div>
-							<div class="hero__controll">
-								<button type="button" class="hero__arrow hero__arrow--left _icon-slider-arrow"></button>
-								<button type="button" class="hero__arrow hero__arrow--right _icon-slider-arrow"></button>
+						</div>
+						<div class="hero__mini">
+							<div class="hero__mini-slider mini-slider swiper">
+								<div class="mini-slider__wrapper swiper-wrapper">
+									<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
+									</div>
+									<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
+									</div>
+									<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
+									</div>
+									<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div class="hero__mini-slider mini-slider swiper">
-							<div class="mini-slider__wrapper swiper-wrapper">
-								<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
-									</div>
-								</div>
-								<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
-									</div>
-								</div>
-								<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
-									</div>
-								</div>
-								<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
-									</div>
-								</div>
-							</div>
+						<div class="hero__controll">
+							<button type="button" class="hero__arrow hero__arrow--left _icon-LeftSlider_arrow"></button>
+							<button type="button" class="hero__arrow hero__arrow--right _icon-RightSlider_arrow"></button>
 						</div>
 					</div>
 					<img class="hero__bg" src="@img/hero_bg.jpg" alt="Hero background image">
