--- a/src/index.html
+++ b/src/index.html
@@ -18,28 +18,36 @@
 						<div class="hero__slider swiper">
 							<div class="hero__wrapper swiper-wrapper">
 								<div class="hero__slide slide-hero swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+									<div data-swiper-parallax-x="40%" data-swiper-parallax-scale="0.2" class="slide-hero__content">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
 									</div>
 								</div>
 								<div class="hero__slide slide-hero swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+									<div data-swiper-parallax-x="40%" data-swiper-parallax-scale="0.2" class="slide-hero__content">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
 									</div>
 								</div>
 								<div class="hero__slide slide-hero swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+									<div data-swiper-parallax-x="40%" data-swiper-parallax-scale="0.2" class="slide-hero__content">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
 									</div>
 								</div>
 								<div class="hero__slide slide-hero swiper-slide">
-									<div class="slide-hero__body">
-										<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+									<div data-swiper-parallax-x="40%" data-swiper-parallax-scale="0.2" class="slide-hero__content">
+										<div class="slide-hero__body">
+											<img src="@img/pet_dog-2.png" class="slide-hero__image" alt="image">
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="hero__mini">
+						<!-- <div class="hero__mini">
 							<div class="hero__mini-slider mini-slider swiper">
 								<div class="mini-slider__wrapper swiper-wrapper">
 									<div class="mini-slider__slide slide-hero slide-hero--mini swiper-slide">
@@ -64,7 +72,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 						<div class="hero__controll">
 							<button type="button" class="hero__arrow hero__arrow--left _icon-LeftSlider_arrow"></button>
 							<button type="button" class="hero__arrow hero__arrow--right _icon-RightSlider_arrow"></button>
