The about_us section done

--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,49 @@
 					</div>
 					<img class="hero__bg" src="@img/hero_bg.jpg" alt="Hero background image">
 				</section>
+				<section class="about-us">
+					<div class="about-us__container">
+						<div class="about-us__body">
+							<div class="about-us__image">
+								<img src="@img/aboutUs_dog.jpg" alt="About us background image">
+							</div>
+							<div class="about-us__content">
+								<div class="about-us__block-header block-header">
+									<div class="block-header__label">About us</div>
+									<h2 class="block-header__title">Treating pet like Royalty</h2>
+									<div class="block-header__text">
+										<blockquote>“They’re not just pets, they’re family”</blockquote>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+											Cras aliquam mi id augue ultrices, in tempus elit tristique. 
+											Aliquam ultrices sem non.</p>
+									</div>
+									<a href="#" class="block-header__button button"> <span>Explore</span></a>
+									<div class="block _clock_fill"></div>
+								</div>
+							</div>
+						</div>
+						<div class="about-us__services services-about-us">
+							<div class="services-about-us__item">
+								<div class="services-about-us__icon">
+									<img src="@img/about/pet_food_icon.svg" alt="Pet food">
+								</div>
+								<div class="services-about-us__label">Pet food</div>
+							</div>
+							<div class="services-about-us__item">
+								<div class="services-about-us__icon">
+									<img src="@img/about/pet_care_icon.svg" alt="Pet care">
+								</div>
+								<div class="services-about-us__label">Pet care</div>
+							</div>
+							<div class="services-about-us__item">
+								<div class="services-about-us__icon">
+									<img src="@img/about/pet_accessories_icon.svg" alt="Pet accessories">
+								</div>
+								<div class="services-about-us__label">Pet accessories</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm', {})
 		</div>
