--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,41 @@
 						</div>
 					</div>
 				</section>
+				<section class="products">
+					<div class="products__container">
+						<div class="products__block-header block-header block-header--center">
+							<div class="block-header__label">Our Products</div>
+							<h2 class="block-header__title">For all your pet needs</h2>
+							<div class="block-header__text">
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+									Cras aliquam mi id augue ultrices, in tempus elit.</p>
+							</div>
+							<a href="#" class="block-header__button button"> <span>Explore</span></a>
+						</div>
+						<div class="products__items">
+							<article class="products__item item-product">
+								<a href="#" class="item-product__link">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/coach.png" alt="image">
+									</div>
+								</a>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Luxury pet bed</a>
+									</h4>
+									<div class="item-product__price">$120</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm', {})
 		</div>
