--- a/src/index.html
+++ b/src/index.html
@@ -132,15 +132,15 @@
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 									Cras aliquam mi id augue ultrices, in tempus elit.</p>
 							</div>
-							<a href="#" class="block-header__button button"> <span>Explore</span></a>
 						</div>
 						<div class="products__items">
 							<article class="products__item item-product">
-								<a href="#" class="item-product__link">
+								<div href="#" class="item-product__header">
 									<div class="item-product__image-ibg--contain">
 										<img src="@img/products/coach.png" alt="image">
 									</div>
-								</a>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
 								<div class="item-product__body">
 									<h4 class="item-product__title">
 										<a href="#" class="item-product__link-title">Luxury pet bed</a>
@@ -155,7 +155,155 @@
 									</ul>
 								</div>
 							</article>
+							<article class="products__item item-product">
+								<div href="#" class="item-product__header">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/dogfood.png" alt="image">
+									</div>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Cat food</a>
+									</h4>
+									<div class="item-product__price">$20</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
+							<article class="products__item item-product">
+								<div href="#" class="item-product__header">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/coach.png" alt="image">
+									</div>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Luxury pet bed</a>
+									</h4>
+									<div class="item-product__price">$120</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
+							<article class="products__item item-product">
+								<div href="#" class="item-product__header">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/dogfood.png" alt="image">
+									</div>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Cat food</a>
+									</h4>
+									<div class="item-product__price">$20</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
+							<article class="products__item item-product">
+								<div href="#" class="item-product__header">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/coach.png" alt="image">
+									</div>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Luxury pet bed</a>
+									</h4>
+									<div class="item-product__price">$120</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
+							<article class="products__item item-product">
+								<div href="#" class="item-product__header">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/dogfood.png" alt="image">
+									</div>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Cat food</a>
+									</h4>
+									<div class="item-product__price">$20</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
+							<article class="products__item item-product">
+								<div href="#" class="item-product__header">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/coach.png" alt="image">
+									</div>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Luxury pet bed</a>
+									</h4>
+									<div class="item-product__price">$120</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
+							<article class="products__item item-product">
+								<div href="#" class="item-product__header">
+									<div class="item-product__image-ibg--contain">
+										<img src="@img/products/dogfood.png" alt="image">
+									</div>
+									<button class="item-product__add-to-cart button"><span>Add to cart</span></button>
+								</div>
+								<div class="item-product__body">
+									<h4 class="item-product__title">
+										<a href="#" class="item-product__link-title">Cat food</a>
+									</h4>
+									<div class="item-product__price">$20</div>
+									<ul class="item-product__rating rating">
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item rating__item--active"></li>
+										<li class="rating__item"></li>
+									</ul>
+								</div>
+							</article>
 						</div>
+						<a href="#" class="products__button button"> <span>Explore</span></a>
 					</div>
 				</section>
 			</main>
