--- a/src/index.html
+++ b/src/index.html
@@ -306,6 +306,24 @@
 						<a href="#" class="products__button button"> <span>Explore</span></a>
 					</div>
 				</section>
+				<section class="services">
+					<div class="services__container">
+						<div class="services__image">
+							<img src="@img/services/services.jpg" alt="Image">
+						</div>
+						<div class="services__block-header block-header block-header--white">
+							<div class="block-header__label">our services</div>
+							<h2 class="block-header__title">Quality Things for Loving Pets</h2>
+							<div class="block-header__text">
+								<blockquote>“More than a Pet Store…”</blockquote>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+									Cras aliquam mi id augue ultrices, in tempus elit tristique. 
+									Aliquam ultrices sem non.</p>
+							</div>
+							<a href="#" class="block-header__button button button--border"> <span>Explore</span></a>
+						</div> 
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm', {})
 		</div>
