The gallery block finished

--- a/src/index.html
+++ b/src/index.html
@@ -324,6 +324,34 @@
 						</div> 
 					</div>
 				</section>
+				<div class="gallery">
+					<div data-gallery class="gallery__container">
+						<div class="gallery__item">
+							<a href="@img/gallery/dog1.jpg" class="gallery__image">
+								<img data-src="@img/gallery/dog1.jpg" alt="Image">
+							</a>
+							<a href="#" class="gallery__link _icon-RightSlider_arrow"><span>Taking dogs care to the next level</span></a>
+						</div>
+						<div class="gallery__item">
+							<a href="@img/gallery/dog2.jpg" class="gallery__image">
+								<img data-src="@img/gallery/dog2.jpg" alt="Image">
+							</a>
+							<a href="#" class="gallery__link _icon-RightSlider_arrow"><span>Taking dogs care to the next level</span></a>
+						</div>
+						<div class="gallery__item">
+							<a href="@img/gallery/dog3.jpg" class="gallery__image">
+								<img data-src="@img/gallery/dog3.jpg" alt="Image">
+							</a>
+							<a href="#" class="gallery__link _icon-RightSlider_arrow"><span>Taking dogs care to the next level</span></a>
+						</div>
+						<div class="gallery__item">
+							<a href="@img/gallery/cat1.jpg" class="gallery__image">
+								<img data-src="@img/gallery/cat1.jpg" alt="Image">
+							</a>
+							<a href="#" class="gallery__link _icon-RightSlider_arrow"><span>Taking dogs care to the next level</span></a>
+						</div>
+					</div>
+				</div>
 			</main>
 			@@include('html/_footer.htm', {})
 		</div>
